@@ -14,9 +14,9 @@ HIGH
 
 MEDIUM
 - rise value on slope tool falls off left edge of play area in Point-Slope tab
-- slope tool rise/run can go off the graph for GTL challenges that don't manipulate slope (ie, "Set the y-Intercept", "Set the Point")
 
 LOW
+- slope tool rise/run can go off the graph for GTL challenges that don't manipulate slope (ie, "Set the y-Intercept", "Set the Point")
 - document CoordinateSpinnerNode constructor
 - implement RewardNode.setLevel so that we have unique rewards for each level
 - remove code related to SlopeEquationNode.PUT_UNSIMPLIFIED_SLOPE_ON_SEPARATE_LINE
